Prevent keyboard  being pushed off screen in Hard Mode; Widened About modal description container

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -119,7 +119,9 @@
 }
 
 .indicator {
-  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  flex: 1;
   text-align: center;
 }
 
@@ -134,6 +136,11 @@
   letter-spacing: 2px;
   padding: 8px 4px;
   text-transform: uppercase;
+
+  @media screen and (max-width: $xs-screen-width) {
+    font-size: 10px;
+    padding: 6px 3px;
+  }
 }
 
 ::ng-deep {
